# ferrodata

./: .gitignore  LICENSE  README.md  publish_to_github.sh  pyproject.toml
examples/: README.md
notebooks/: ferrodata_walkthrough.ipynb
src/ferrodata/: __init__.py  export.py  helpers.py  parse.py  types.py  visualize.py
