[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ferrodata"
version = "0.1.0"
description = "Minimal ferroelectric AixACCT .dat parser, exporter, and visualizer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "ferrodata contributors" }
]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.6"
]

[project.urls]
Homepage = "https://github.com/<your-username>/ferrodata"
Repository = "https://github.com/<your-username>/ferrodata"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
